hphp/hack/test/typecheck/const_attribute/usage/subclass_not_const.php.exp
File "subclass_not_const.php", line 9, characters 7-7:
Only __Const classes may extend a __Const class (Typing[4198])
